--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Coiny&family=Roboto:wght@400;700&display=swap');
 
+*{
+    box-sizing: border-box;
+}
+
 body {
     color: #333;
-    font: 400 24px 'Roboto' ,sans-serifa;
+    font: 400;
+    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
 
+}
+
+header , main , aside, footer {
+
+    width: 100%;
+}
+section {
+
+    width: 45%;
+}
+
+nav {
+
+    padding: 20px;
 }
 
 nav h1, footer h1 {
     font-family: 'Coiny',cursive;
 }
+nav h1 {
+    margin-right: auto;
+}
+nav a ,footer a {
+
+    margin-left: 20px;
+    color: #7a7a7a;
+    text-decoration: none;
+
+}
+nav a {
+
+    text-transform: capitalize;
+}
+
+nav a :hover {
+
+    text-decoration: underline;
+} 
 header h1 {
     font-size: 41px;
+    font-weight: 700;
 }
 main {
     font-size: 21px;
@@ -18,6 +59,11 @@ main {
 
 h1,h2,h3,h4 {
     color: black;
+}
+
+h2 {
+
+    font-weight: none;
 }
 h2,h3 {
     font-size: 29px;
@@ -30,10 +76,16 @@ h4 {
     font-size: 51px;
     color: white;
     background-color: black;
+    margin: 0;
+    line-height: 100px;
+    padding: 10px;
 }
 footer {
     background-color: #fcee21;
 }
 footer h1 {
     font-size: 33px;
+    height: 100px;
+    padding: 10px;
+    background-color: #fcee21;
 }
